fixed title and finalized abstract

--- a/Methods/ThesisTHC.tex
+++ b/Methods/ThesisTHC.tex
@@ -1,4 +1,3 @@
-
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
 \usepackage{tikz}
@@ -32,7 +31,7 @@
 \begin{document}
 \pagenumbering{gobble}
 {\centering
-  \textbf{A Lossless and High Resolution Approach to Recovering Dynamic Brain Functional Connectivity}\par
+  \textbf{A Gaussian Approach to Recovering Dynamic Brain Functional Connectivities}\par
   A Thesis\par
   Submitted to the Faculty\par
   in partial fulfillment of the requirements for the\par
@@ -68,7 +67,7 @@ Jeremy Manning\par
 \newpage
 \pagenumbering{roman}
 \section{Abstract}
-Recent research focused on the analysis of brain functional connectivity---pair-wise correlation between time series of activities in different brain regions---has achieved monumental breakthroughs in improving our understanding of the human brain. Moreover, new efforts have attempted to cast functional connectivity as a dynamic process that changes from moment to moment and have revealed that important brain dynamics information exists within these correlation structures. A tried and tested method of calculating dynamic functional connectivity is the sliding window method, which calculates the temporal correlation at a time point by finding the average correlation of neighboring time points. However, this process blurs the temporal correlation structures at each moment, and thus provides only a rough approximation (or low resolution representation) of the temporal ground truth. In addition, the sliding window approach requires an extended buffer to calculate the correlation at each time point. Therefore it is unable to recover the dynamic correlations at the edges of the time series, resulting in substantial data loss. In order to more effectively recover dynamic correlation structures from brain data, we present the Time Sequence Correlation Recovery (TimeCorr) method. TimeCorr calculates the correlation at each time point $t$ by multiplying the correlation components of the whole time series by a Gaussian distribution centering at $t$. The use of Gaussian coefficients improves the locality of TimeCorr recovery results and makes it possible for TimeCorr to accurately calculate the dynamic correlation of time points at the edges of the time series. To illustrate the effectiveness of TimeCorr, we compare its performance with that of the sliding window approach, and show that TimeCorr produces similar and often times more accurate and stable results across all of our test cases.
+Recent research focused on the analysis of brain functional connectivities---pair-wise correlation between time series of activities in different brain regions---has achieved monumental breakthroughs in improving our understanding of the human brain. Moreover, new efforts have attempted to cast functional connectivities as dynamic processes that change from moment to moment and have revealed that important brain dynamics information exists within these correlation structures. A tried and tested method of recovering dynamic brain functional connectivities is the sliding window method, which applies the correlation function on a window of time points to calculate the temporal correlation at the window center. However, this process is essentially finding the average correlation of all the time points within the sliding window instead of the actual temporal correlation at the window center, and thus provides only a low resolution representation of the temporal ground truth. In addition, the sliding window approach requires an extended buffer to calculate the correlation at each time point. Therefore it is unable to recover the dynamic correlations at the edges of the time series, resulting in substantial data loss. In order to more effectively recover dynamic functional connectivities from brain data, we present the Time Sequence Correlation Recovery (TimeCorr) method. TimeCorr calculates the correlation at each time point $t$ by multiplying the correlation components of the whole time series by a Gaussian distribution centering at $t$. The use of Gaussian coefficients increases the temporal resolution of TimeCorr calculations by putting more emphasis on the time points near the Gaussian center. At the same time, TimeCorr is able to improve the stability of its results by incorporating information from the entire dataset into each of its calculations. Lastly, using a flexible Gaussian distribution instead of a stiff window makes it possible for TimeCorr to calculate the dynamic correlations of time points at the edges of the time series. To illustrate the effectiveness of TimeCorr, we compare its performance with that of the sliding window approach, and show that TimeCorr produces similar and often times more accurate and stable results in all of our test cases.
 
 \newpage
 \section{Acknowledgements}
@@ -407,8 +406,7 @@ The analyses on synthetic datasets demonstrate the advantages of using TimeCorr 
 \end{align*}
 We did not use the exact values obtained through this equation, but rather used rough approximations that cover ranges of window lengths that could give us a more comprehensive understanding of the variations in sliding window performance.
 
-
-Three different datasets were used for this analysis: Sherlock, Pieman, and Forrest. Detailed descriptions for each dataset are included in the corresponding subsections. For each dataset, we conducted 100 repetitions of the TimeCorr Decoding Analysis, each with different random group divisions. The results displayed below are the average of 100 repetitions.
+Three different datasets were used for this analysis: Sherlock, Pieman, and Forrest. Detailed descriptions for each dataset are included in the corresponding subsections. For each dataset, we first used Incremental PCA to reduce the fMRI matrices to only 100 voxels (making the dataset more manageable for large scale calculation), and then conducted 100 repetitions of the TimeCorr Decoding Analysis, each with different random group divisions, on the reduced activations. The results displayed below are the average of 100 repetitions.
 
 \subsubsection{Description for the Pieman Dataset}
 This dataset was collected by Uri Hasson's lab in 2016 \citep{hasson2016}. The stimuli for this experiment were derived from a 7 minute recording of the ``Pie Man" story by Jim O'Grady. The experimental subjects were all native English speakers with normal hearing. Four testing conditions with random subject assignments were implemented: 36 subjects listened to the story from beginning to end, and were labelled as the ``intact" group; 18 subjects listened to a version of the story where the paragraphs were scrambled randomly, and were labelled as the ``paragraph" group; 36 subjects listened to a version of the story where the words were scrambled randomly, and were labelled as the ``word" group; lastly, 36 subjects did not listen to anything and stayed in resting state throughout the experiment, and were labelled as the ``resting" group. 12 seconds of neutral music and 3 seconds of silence preceded and 15 seconds of silence followed each playback in all conditions. The brain activities of all subjects for the duration of the experiment were recorded into fMRI datasets, with the data from music and silence periods discarded from all analyses.
@@ -491,37 +489,23 @@ Lastly, we observe that the results from the sliding window method contains sign
 \clearpage
 \newpage
 \section{Conclusion}
-We proposed TimeCorr, a lossless and high resolution alternative to the sliding window approach for functional connectivity calculation, and TimeCorr Decoding analysis, a new means of evaluating the quality of functional connectivity recovery from actual fMRI datasets. Through testing on synthetic data, we demonstrated the superiority of the TimeCorr approach over the sliding window approach in recovering temporal functional connectivity, as well as its ability to differentiate between datasets with different correlation dynamics (block vs ramping). Then, to understand how well TimeCorr and the sliding window method compares in recoverying stimulus-driven brain dynamics information from fMRI data, we carried out TimeCorr Decoding Analysis on three actual fMRI datasets using different configurations (temporal resolutions) of TimeCorr and the sliding window method. Finally, from the patterns displayed by the correlation curves in the results of our TimeCorr Decoding Analysis, we used our conclusions synthetic dataset testing to extrapolate that the brain activities in the Pieman, Sherlock and Forrest datasets may consist of a mixture of multiple different length time blocks, each possessing stable correlation structures within its scope, with linear transition in-between. Christopher Baldassano and colleagues confirmed this extrapolation for the Pieman and the Sherlock datasets in one of their recent papers \citep{Baldassano2016}.
+We proposed TimeCorr, a lossless and high resolution alternative to the sliding window approach for functional connectivity calculation, and TimeCorr Decoding analysis, a new means of evaluating the quality of functional connectivity recovery from actual fMRI datasets. Through testing on synthetic data, we demonstrated the superiority of the TimeCorr approach over the sliding window approach in recovering dynamic functional connectivities, as well as its ability to differentiate between datasets with different correlation dynamics (block vs ramping). Then, to understand how well TimeCorr and the sliding window method compares in recovering stimulus-driven brain dynamics information from fMRI data, we carried out TimeCorr Decoding Analysis on three real fMRI datasets using different configurations (temporal resolutions) of TimeCorr and the sliding window method. Finally, from the patterns displayed by the correlation curves in the results of our TimeCorr Decoding Analysis, we used our conclusions from synthetic dataset testing to extrapolate that the brain activities in the Pieman, Sherlock and Forrest datasets may consist of a mixture of multiple different length time blocks, each possessing stable correlation structures within its scope, with linear transition in-between. Christopher Baldassano and colleagues confirmed this extrapolation for the Pieman and the Sherlock datasets in one of their recent papers \citep{Baldassano2016}.
 
-Through the lens of the High-Order Brain Dynamics Model, we were able analyze the patterns in higher orders of functional connectivity and achieve a better understanding of stimulus-driven brain dynamics in existing datasets (Pieman, Forrest and Sherlock). In addition, through the construction of the Multi-Level Mixture Model, we were able to find effective ways to optimally combine stimulus-relevant information from multiple orders of functional connectivities into one functional connectivity matrix. This process enriches the amount of stimulus-relevant information in existing dataset without creating redundancies, which greatly increases the brain decoding capabilities of these dataset and has practical applications in many areas.
+From our tests on the Pieman, Sherlock and Forrest datasets, we saw that the TimeCorr's flexibility in temporal resolution revealed different dynamic functional connectivity patterns subject brain activations. In addition, we were able to visualize, compare and achieve a better understanding of these dynamic patterns through the TimeCorr Decoding Analysis. With more knowledge on the dynamics behind our brain activities, we increase our capability to decode the intricacies behind human perception, learning and growth, and improve the quality of life.
 
-Firstly, this technology can potentially be used for mental evaluations in medical diagnosis and criminal investigations. After collecting the cognitive responses to certain stimuli of normal subjects, we can use the HOBD model to create a more comprehensive representation of their brain dynamics using information from high-order functional connectivity, as well as calculate the average range of decoding accuracies of the normal population. Then, we can use the HOBD model to create a similar representation of the cognitive response of any new subjects to the same stimuli. By using the TimeCorr Decoding Analysis to cross validate the high-order functional connectivity representation of the subject's brain responses with the ISFC of normal subjects, we can compare the resulting decoding accuracy with the previously calculated range for normal subjects to detect any cognitive anomalies in the subject's responses. This will help us identify any potential psychological or mental disorders, or suspicious reactions to crime scene reenactments. Although similar technologies already exist, we believe by constructing a more complex but comprehensive representation of high-order brain activities, we are inherently using more criteria for classification and are thus able obtain higher classification accuracy.
+In order to further improve TimeCorr and dynamic functional connectivity research in general, we intend to experiment with the following options:
 
-Secondly, as the HOBD model is able to generate more stimulus-relevant information from brain activities through analysis of high-order functional connectivities, we are able to produce more feature points to represent the state of the brain at each time point. Having a more complex feature map and a more comprehensive representation of the underlying temporal activities of the brain will increase the ability of Machine Learning algorithms to learn the patterns and relationships between the stimulus and the corresponding temporal brain activities. The trained Machine Learning models can then be used to recreate stimuli (visual, audio, etc) from HOBD representations of new brain activities, which could potentially give us more knowledge on human perception patterns.
+Firstly, we now have more confidence that the brain activities of subjects in the Pieman, Forrest and Sherlock datasets on average mainly consists of time blocks of stable correlation structures. Therefore, to better calculate the temporal functional connectivity at each time point, using only activations of time points within the scope of the corresponding correlation time block could significantly improve the accuracy of our calculations. One difficulty to this approach is the detection of block borders where the abrupt correlation changes occur. Christopher Baldassano and colleagues have tried using a variant of the Hidden Markov Model to detect the transitions between time blocks and achieved good results \citep{Baldassano2016}. We believe incorporating this approach into our TimeCorr approach could very likely improve the quality of our functional connectivity recoveries.
 
-Although we were able to increase the amount of stimulus-driven brain dynamics information retrievable from fMRI datasets through the use of TimeCorr and TimeCorr Level Up, we believe the abrupt decrease in decoding accuracy following the second order ISFC does not accurately represent the amount of information contained in these levels and is indicative of information loss. As our tests proved that TimeCorr is not the only cause for the decrease in decoding accuracy, we hypothesize that the information loss may also have been partially caused by PCA dimensionality reduction in the TimeCorr Level Up processes.
+Secondly, although replacing flat averaging with Gaussian averaging greatly improved the temporal accuracy of our recovery efforts, we feel like there is still room to increase the temporal resolution of our methods. Therefore, we plan to experiment with alternative distributions (e.g. Laplacian Distribution) for TimeCorr coefficients generation to achieve even better temporal accuracy in our recovery of dynamic functional connectivities.
 
-To address this issue and to further improve the High-Order Brain Dynamics Model in the future, we intend to experiment with the following options:
+Thirdly, we plan to experiment with other dimensionality reduction algorithms for the initial voxel-wise reduction of fMRI datasets. Although PCA is able to efficiently combine brain voxels with similar activity patterns and effectively preserve the general correlation dynamics within a dataset, it loses considerable amounts of important information by neglecting spatial distinctions between voxels. The correlation between voxels with similar activity patterns may be disposable when the voxels are from the same brain region, but the correlation between similar voxels across different brain regions could potentially contain very important information on the stimulus-driven dynamics of the brain. In addition, the underlying distribution of brain activations does not necessarily follow a normal distribution, which may greatly decrease the effectiveness of PCA in dimensionality reduction of brain data. We believe factor analysis and autoencoder neural networks may prove to be effective alternative methods of dimensionality reduction that is worth exploring.
 
-Firstly, we now have more confidence that the brain activities of subjects in the Pieman, Forrest and Sherlock datasets on average mainly consists of time blocks of stable correlation structures. Therefore, to better calculate the temporal functional connectivity at each time point, using only activations of time points within the scope of the corresponding correlation time block could significantly improve the accuracy of our calculations. One difficulty to this approach is the detection of block borders where the abrupt correlation changes occur. Christopher Baldassano and colleagues have tried using a variant of the Hidden Markov Model to detect the transitions between time blocks and achieved good results \citep{Baldassano2016}. We believe implementing this approach into our HOBD model could very likely improve the quality of our functional connectivity recoveries.
+Lastly, we believe that important information may exist beyond voxel activations and their first level functional connectivities. The brain is a network of seemingly autonomous nodes that are actually intricately interconnected. Intuitively, voxels in the brain are analogous to the intersections within a 3-dimensional web: all voxels are delicately connected with each other, forming small sections that interweave into larger and larger clusters. Similarly, when we find the temporal correlation between two voxels, we gain information on how they interact with each other at that specific time point. By ``leveling up", we find the correlation between the interactions of two pairs of voxels, which gives us additional information on the dynamics of a slightly larger community (4 voxels). Following this intuition, every time a new order of functional connectivity is calculated on top of another level of functional connectivity, we are essentially retrieving information on the dynamic relationship between increasingly larger clusters. Therefore, to fully grasp the functions of a single brain region in the network, it is crucial to understand its activities in the context of the richly woven network that supports it \citep{Battiston2017}. As demonstrated by previous efforts by the Contextual Dynamics Lab, high level functional connectivities may contain non-overlapping cognitive information inaccessible by functional connectivities at lower levels \citep{jeremy2017}. Therefore, incorporating information from higher order dynamics could potentially improve the quality of brain analyses.
 
-Use alternative distributions to generate coefficients for even better temporal resolution (e.g. Laplacian Distribution)
-
-Secondly, we plan to experiment with other dimensionality reduction algorithms, like Spacial ICA. Although PCA is able to efficiently combine brain voxels with similar activity patterns and effectively preserve the general correlation dynamics within a dataset, it loses considerable amounts of important information by neglecting spatial distinctions between voxels. The correlation between voxels with similar activity patterns may be disposable when the voxels are from the same brain region, but the correlation between similar voxels across different brain regions could potentially contain very important information on the stimulus-driven dynamics of the brain. Alternative methods like spacial ICA are not only able to effectively reduce dataset dimensionality like the PCA method, but also does so while taking into consideration the spacial distinction between voxels. Spacial ICA has seen applications in multiple projects and has achieved good results \citep{Dipasquale2015,Iraji2016,Xu2013}, so we believe it could potentially be an effective alternative to PCA in our HOBD model.
-
--------------------MOVED HERE-------------------
-
-Thus, we hypothesize that exploration of high-order functional connectivities within the brain---the correlation structure within functional connectivities---could potentially reveal more about the dynamics behind brain functions. To achieve this, we present the High-Order Brain Dynamics (HOBD) model, which examines and incorporates information from multiple orders of brain functional connectivities to gain a more comprehensive understanding of how the brain responds to controlled stimuli. The HOBD model also introduces two new methods: TimeCorr, which revolutionizes the way temporal functional connectivity is calculated, and TimeCorr Level Up, a new scalable solution to retrieving functional connectivities at high orders. Through the lens of the the HOBD model, we gained a better understanding of how the dynamics of stimulus-driven brain activities are represented by different levels of functional connectivities, and how different orders of functional connectivities complement each other in providing non-overlapping information on stimulus-driven brain patterns.
-
-Lastly, \textbf{important information may exist beyond voxel activations and their first level functional connectivities.} The brain is a network of seemingly autonomous nodes that are actually intricately interconnected. To fully grasp the functions of a single brain region in the network, it is crucial to understand its activities in the context of the richly woven network that supports it \citep{Battiston2017}. As demonstrated by previous efforts by the Contextual Dynamics Lab, high level functional connectivities may contain non-overlapping cognitive information inaccessible by functional connectivities at lower levels \citep{jeremy2017}. For example, useful information about the brain may exist within interactions between interactions between brain regions (2nd order functional connectivity), interactions between interactions between interactions (3rd order functional connectivity), or in even higher orders of functional connectivity. Therefore, incorporating information from higher order dynamics could potentially improve the quality of brain analyses.
-
-Secondly, we designed a ``level up" method that utilizes TimeCorr, Inter-Subject Functional Connectivity (ISFC) and Principle Component Analysis (PCA) to calculate higher order functional connectivity. As illustrated in Figure \ref{fig:HighOrder}, the process of leveling up involves repeatedly finding the correlation of correlation structures. Intuitively, voxels in the brain are analogous to the intersections within a 3-dimensional web: all voxels are delicately connected with each other, forming small sections that interweave into larger and larger clusters. Similarly, when we find the temporal correlation between two voxels, we gain information on how they interact with each other at that specific time point. By ``leveling up", we find the correlation between the interactions of two pairs of voxels, which gives us additional information on the dynamics of a slightly larger community (4 voxels). Following this intuition, every time a new order of functional connectivity is calculated on top of another level of functional connectivity, we are essentially retrieving information on the dynamic relationship between increasingly larger clusters, which could potentially be useful for achieving a better understanding of the network dynamics inside our brains.
-
--------------------END MOVE----------------------
-
-To conclude, recovering high-order functional connectivity patterns is a challenging task, but is also crucial for achieving a more in-depth and comprehensive understanding of stimulus-driven brain dynamics. We introduced the HOBD model as a new means to examine and incorporate useful information from high-order functional connectivities into our analysis. Using this model, we were able to discover that important information for decoding the brain is contained within these latent structures. We believe the applications and benefits of high-order brain connectivities are endless, and we are excited to explore new approaches to improve the HOBD model and expand the horizon of human brain decoding.
+To conclude, recovering the dynamic functional connectivity patterns in noisy fMRI datasets is a challenging task, but is also crucial for achieving a more in-depth and comprehensive understanding of stimulus-driven brain dynamics. We introduced the TimeCorr and TimeCorr Decoding Analysis as new means to calculate and examine functional connectivity structures in brain fMRI datasets. Using these methods, we were able to discover important dynamic correlation patterns in the brain that were heretofore inaccessible. We believe the applications and benefits of understanding the dynamic brain functional connectivities are endless, and we are excited to explore new approaches to improve our research methods and expand the horizon of human brain decoding.
 
 \newpage
 \bibliographystyle{apalike}
-\bibliography{HOBD}
+\bibliography{ThesisTHC}
 \end{document}
